--- a/stureports/think-java/kaifouts.think-java_results.html
+++ b/stureports/think-java/kaifouts.think-java_results.html
@@ -11,6 +11,9 @@ Run date: 2018-12-04
 [PRE-WARN]: Expected non-empty: ./stuwork/kaifouts/think-java-kaifouts
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
+Cloning into 'think-java-kaifouts'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -19,7 +22,31 @@ Run date: 2018-12-04
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+American Format:
+	Thursday, July 16, 2018
+	European Format:
+	Thursday 16 July 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Time:
+	11: 15: 31
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -29,10 +56,32 @@ Run date: 2018-12-04
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[ERROR] javac failed Multadd.java Multadd.java:6: error: <identifier> expected
+	System.out.println("Exercise 6...");
+	                  ^
+	Multadd.java:6: error: illegal start of type
+	System.out.println("Exercise 6...");
+	                   ^
+	Multadd.java:9: error: <identifier> expected
+			System.out.println("multAdd"
+			                  ^
+	Multadd.java:9: error: illegal start of type
+			System.out.println("multAdd"
+			                   ^
+	Multadd.java:9: error: ')' expected
+			System.out.println("multAdd"
+			                            ^
+	Multadd.java:12: error: ';' expected
+		public static double Multadd(double a, double b, double c){
+		      ^
+	6 errors
+	
+[SUMMARY] 
+	['Multadd: COMPILE ERROR (- 0.10)']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.15</b>
 
 <hr>
 
@@ -41,10 +90,12 @@ Run date: 2018-12-04
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-	[ERROR] No chapter work for:chapter6
+[SUMMARY] 
+	['Exercise4: MISSING (- 0.50)'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -53,10 +104,32 @@ Run date: 2018-12-04
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-	[ERROR] No chapter work for:chapter6
+[COMPILING] Swettercise.java
+	[ERROR] javac failed Swettercise.java Swettercise.java:21: error: cannot find symbol
+				str = str = i = ", ";
+				^
+	  symbol:   variable str
+	  location: class Swettercise
+	Swettercise.java:21: error: cannot find symbol
+				str = str = i = ", ";
+				      ^
+	  symbol:   variable str
+	  location: class Swettercise
+	Swettercise.java:21: error: incompatible types: String cannot be converted to int
+				str = str = i = ", ";
+				                ^
+	Swettercise.java:23: error: cannot find symbol
+			System.out.println(str);
+			                   ^
+	  symbol:   variable str
+	  location: class Swettercise
+	4 errors
+	
+[SUMMARY] 
+	['Swettercise1: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
@@ -65,10 +138,12 @@ Run date: 2018-12-04
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise3: MISSING (- 0.50)'
+	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -77,10 +152,13 @@ Run date: 2018-12-04
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise5: MISSING (- 0.50)'
+	 'Exercise6: MISSING (- 0.50)'
+	 'Exercise8: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
