--- a/stureports/think-java/shanebaxter101.think-java_results.html
+++ b/stureports/think-java/shanebaxter101.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-12-04
+Run date: 2018-12-19
 <br>Student User: shanebaxter101
 <br>Project: think-java
 <br>
@@ -71,8 +71,8 @@ Im thinking of a number between 1 and 100,(including both)
 	Can you guess what it is?
 	Type a number: 
 	Your guess is: 13
-	The number I was thinking of was: 12
-	You were off by: 1
+	The number I was thinking of was: 66
+	You were off by: -53
 	
 <--
 	[OUTPUT OK]
@@ -482,19 +482,19 @@ Im thinking of a number between 1 and 100,(including both)
 	</table><br>
 	
 	<br>Chapter12, Test High Card
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isHighCard("[Ace of Clubs, Ace of Diamonds, Queen of Clubs, Queen of Diamonds, Queen of Hearts]")  </td><td align="left">12</td><td bgcolor="red"><b>1 </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isHighCard("[Ace of Clubs, Ace of Diamonds, Queen of Clubs, Queen of Diamonds, Queen of Hearts]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isHighCard("[2 of Clubs, 3 of Diamonds, 2 of Hearts, 3 of Hearts, 2 of Diamonds]")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
-	[deductions=0.05]
+	[deductions=0.0]
 	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['CheckPokerHands: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+	['CheckPokerHands: PASSED - EXCELLENT!']
 [DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
-<b>          [SCORE] <font color="green">0.95</font></b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
